# gst-snoop-pipe

./: .gitignore  CMakeLists.txt  README.md
app/: example_appsink_snoop.cc  test_gst.cc  test_gst_snoop_pipe.cc
cmake/: FindGLIB.cmake
cmake/modules/: FindGLIB2.cmake  FindGStreamer.cmake
include/: gst_cam.h  gst_snoop_pipe.h
src/: gst_cam.cc  gst_snoop_pipe.cc
